pingdataconsole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pingdataconsole
  name: pingdataconsole
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pingdataconsole
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/fm_pingnet-internal: "true"
        io.kompose.service: pingdataconsole
    spec:
      containers:
      - image: docker.io/pingidentity/pingdataconsole:2008
        imagePullPolicy: ""
        name: pingdataconsole
        ports:
        - containerPort: 8443
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
