pingdatagovernance-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pingdatagovernance
  name: pingdatagovernance
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pingdatagovernance
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/fm_pingnet-dmz: "true"
        io.kompose.network/fm_pingnet-internal: "true"
        io.kompose.service: pingdatagovernance
    spec:
      containers:
      - args:
        - wait-for
        - pingdirectory:389
        - -t
        - "300"
        - --
        - entrypoint.sh
        - start-server
        image: samirgandhi/pingdatagoverance:dgpap
        imagePullPolicy: ""
        name: pingdatagovernance
        ports:
        - containerPort: 80
        - containerPort: 443
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
