pingdatagovernance-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pingdatagovernance
  name: pingdatagovernance
spec:
  ports:
  - name: "9080"
    port: 9080
    targetPort: 80
  - name: "7443"
    port: 7443
    targetPort: 443
  selector:
    io.kompose.service: pingdatagovernance
status:
  loadBalancer: {}
