pingdatagovernancepap-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pingdatagovernancepap
  name: pingdatagovernancepap
spec:
  ports:
  - name: "8443"
    port: 8443
    targetPort: 8443
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: pingdatagovernancepap
status:
  loadBalancer: {}
