pingdirectory-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pingdirectory
  name: pingdirectory
spec:
  ports:
  - name: "1636"
    port: 1636
    targetPort: 636
  - name: "1443"
    port: 1443
    targetPort: 443
  selector:
    io.kompose.service: pingdirectory
status:
  loadBalancer: {}
